Lift z-index for hints so they are no longer hidden by map

--- a/web-bundle/src/main/resources/com/graphhopper/maps/css/style.css
+++ b/web-bundle/src/main/resources/com/graphhopper/maps/css/style.css
@@ -481,5 +481,10 @@ td img.pic {
 
 .CodeMirror-lint-tooltip {
     /* tool tip should not be hidden by map*/
-    z-index: 99999999999;
+    z-index: 2000;
+}
+
+.CodeMirror-hints {
+    /* hints should not be hidden by map*/
+    z-index: 1000;
 }
